--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Home</title>
     <link rel="stylesheet" href="out/styles/main.min.css">
     <link rel="stylesheet" href="out/styles/libs/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
 </head>
 <body>
@@ -49,33 +48,33 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Trainers</a>
+                            <a class="nav-link" href="timetable.html">Trainers</a>
                         </li>
                         <li class="nav-item dropdown dropdown-header-button">
-                            <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" href="classes.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-chevron-down"></i> Classes
                             </a>
                             <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
                                 <div class="arrow-up"></div>
-                                <a class="dropdown-item" href="#"><i class="fas fa-chevron-right"></i>Cardio fitness</a>
-                                <a class="dropdown-item" href="#"><i class="fas fa-chevron-right"></i>Pilates</a>
-                                <a class="dropdown-item" href="#"><i class="fas fa-chevron-right"></i>Aerobics</a>
+                                <a class="dropdown-item" href="class-single.html"><i class="fas fa-chevron-right"></i>Cardio fitness</a>
+                                <a class="dropdown-item" href="class-single.html"><i class="fas fa-chevron-right"></i>Pilates</a>
+                                <a class="dropdown-item" href="class-single.html"><i class="fas fa-chevron-right"></i>Aerobics</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="pricing.html">Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacts</a>
+                            <a class="nav-link" href="contact.html">Contacts</a>
                         </li>
                     </ul>
                 </div>
