--- a/timetable.html
+++ b/timetable.html
@@ -5,14 +5,70 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Timetable</title>
+    <title>About</title>
     <link rel="stylesheet" href="out/styles/main.min.css">
     <link rel="stylesheet" href="out/styles/libs/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
 
 </head>
 <body>
-
+<header>
+    <div class="header-socials">
+        <div class="header-call">
+            <a href="tel:1-900-342-9876"><i class="fas fa-phone-alt"></i> 1-900-342-9876</a>
+        </div>
+        <div class="header-social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-pinterest-p"></i></a>
+            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+            <a href="#"><i class="fab fa-tumblr"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fas fa-wifi"></i></a>
+        </div>
+    </div>
+    <div class="header-navigation" id="headerNavigation">
+        <nav class="navbar sticky-top navbar-expand-xl">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="fas fa-bars"></span>
+            </button>
+            <img class="navbar-brand" src="out/img/home/gym-logo.png" alt="Gym logo">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="timetable.html">Trainers</a>
+                    </li>
+                    <li class="nav-item dropdown dropdown-header-button">
+                        <a class="nav-link" href="classes.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-chevron-down"></i> Classes
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
+                            <div class="arrow-up"></div>
+                            <a class="dropdown-item" href="class-single.html"><i class="fas fa-chevron-right"></i>Cardio fitness</a>
+                            <a class="dropdown-item" href="class-single.html"><i class="fas fa-chevron-right"></i>Pilates</a>
+                            <a class="dropdown-item" href="class-single.html"><i class="fas fa-chevron-right"></i>Aerobics</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pricing.html">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
 
 
 <script type="text/javascript" src="out/scripts/libs/jquery-3.4.0.js"></script>
