reload header on home page and part of home page

--- a/index.html
+++ b/index.html
@@ -13,30 +13,35 @@
 <body>
     <header>
         <div class="upper-header">
-            <div class="upper-block-window">
-                <div class="upper-title">
-                    <span class="upper-title-head">Perfect fitness psd</span>
-                    <span class="upper-title-middle">Best choise for your site</span>
-                    <p>Lorem ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    <form class="upper-title-button" action="https://support.google.com/"><button>READ MORE</button></form>
+            <div class="container-fluid upper-block-window">
+                <div class="row">
+                    <div class="col-12 upper-title">
+                        <span class="upper-title-head">Perfect fitness psd</span>
+                        <span class="upper-title-middle">Best choise for your site</span>
+                        <p>Lorem ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <form class="upper-title-button" action="https://support.google.com/"><button>READ MORE</button></form>
+                    </div>
                 </div>
             </div>
             <div class="upper-arrow">
                 <a href="#headerNavigation"><img src="out/img/home/arrow-down.png" alt="Arrow down"></a>
             </div>
         </div>
-        <div class="header-socials">
-            <div class="header-call">
-                <a href="tel:1-900-342-9876"><i class="fas fa-phone-alt"></i> 1-900-342-9876</a>
-            </div>
-            <div class="header-social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                <a href="#"><i class="fab fa-tumblr"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fas fa-wifi"></i></a>
+        <div class="container-fluid header-socials">
+            <div class="row">
+                <div class="col-sm-6 header-call">
+                    <a href="tel:1-900-342-9876"><i class="fas fa-phone-alt"></i> 1-900-342-9876</a>
+                </div>
+                <div class="col-sm-6 header-social-icons">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#"><i class="fab fa-tumblr"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fas fa-wifi"></i></a>
+                </div>
+
             </div>
         </div>
         <div class="header-navigation" id="headerNavigation">
@@ -82,7 +87,168 @@
         </div>
     </header>
     <main>
+        <div class="container-fluid upper-main-home">
+            <div class="row">
+                <div class="col-lg-5 upper-main-home-image">
+                    <img src="out/img/home/home-main-title.jpg" alt="Girl image">
+                </div>
+                <div class="col-lg-7 upper-main-home-title">
+                    <span class="home-title">Lorem ipsum dolorsit!</span>
+                    <p class="home-text">Simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry's standard dummy</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid live-main-home">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 live-translation">
+                    <div class="live-content">
+                        <div class="live-block">
+                            <span class="live-block-title">Live <i>spinning</i></span>
+                            <span class="live-block-room">Room 2</span>
+                        </div>
+                        <div class="live-image">
+                            <img src="out/img/home/live-spinning-image.jpg" alt="Spinning image">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 live-translation">
+                    <div class="live-content">
+                        <div class="live-block">
+                            <span class="live-block-title">Live <i>gym</i></span>
+                            <span class="live-block-room">Room 1</span>
+                        </div>
+                        <div class="live-image">
+                            <img src="out/img/home/live-gym-image.jpg" alt="Gym image">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 live-translation">
+                    <div class="live-content">
+                        <div class="live-block">
+                            <span class="live-block-title">Live <i>pilates</i></span>
+                            <span class="live-block-room">Room 4</span>
+                        </div>
+                        <div class="live-image">
+                            <img src="out/img/home/live-pilates-image.jpg" alt="Pilates image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid class-main-home">
+            <div class="row">
+                <div class="col-xl-8 all-classes">
+                    <div class="all-classes-title">
+                        <span>All classes</span>
+                    </div>
+                    <div class="all-classes-content">
+                        <div class="column-classes">
+                            <div class="column-classes-row">
+                                <div class="row-name">
+                                    <span><i class="far fa-clock"></i>Cardio fitness</span>
+                                </div>
+                                <div class="row-social">
+                                    <i class="far fa-calendar"></i>
+                                    <i class="far fa-envelope"></i>
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-share"></i>
+                                </div>
+                            </div>
+                            <div class="column-classes-row">
+                                <div class="row-name">
+                                    <span><i class="far fa-clock"></i>Spinning</span>
+                                </div>
+                                <div class="row-social">
+                                    <i class="far fa-calendar"></i>
+                                    <i class="far fa-envelope"></i>
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-share"></i>
+                                </div>
+                            </div>
+                            <div class="column-classes-row">
+                                <div class="row-name">
+                                    <span><i class="far fa-clock"></i>Pilates</span>
+                                </div>
+                                <div class="row-social">
+                                    <i class="far fa-calendar"></i>
+                                    <i class="far fa-envelope"></i>
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-share"></i>
+                                </div>
+                            </div>
+                            <div class="column-classes-row">
+                                <div class="row-name">
+                                    <span><i class="far fa-clock"></i>Boxing</span>
+                                </div>
+                                <div class="row-social">
+                                    <i class="far fa-calendar"></i>
+                                    <i class="far fa-envelope"></i>
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-share"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column-classes">
+                            <div class="column-classes-row">
+                                <div class="row-name">
+                                    <span><i class="far fa-clock"></i>Aerobics</span>
+                                </div>
+                                <div class="row-social">
+                                    <i class="far fa-calendar"></i>
+                                    <i class="far fa-envelope"></i>
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-share"></i>
+                                </div>
+                            </div>
+                            <div class="column-classes-row">
+                                <div class="row-name">
+                                    <span><i class="far fa-clock"></i>Kick boxing</span>
+                                </div>
+                                <div class="row-social">
+                                    <i class="far fa-calendar"></i>
+                                    <i class="far fa-envelope"></i>
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-share"></i>
+                                </div>
+                            </div>
+                            <div class="column-classes-row">
+                                <div class="row-name">
+                                    <span><i class="far fa-clock"></i>Crossfit</span>
+                                </div>
+                                <div class="row-social">
+                                    <i class="far fa-calendar"></i>
+                                    <i class="far fa-envelope"></i>
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-share"></i>
+                                </div>
+                            </div>
+                            <div class="column-classes-row">
+                                <div class="row-name">
+                                    <span><i class="far fa-clock"></i>Yoga</span>
+                                </div>
+                                <div class="row-social">
+                                    <i class="far fa-calendar"></i>
+                                    <i class="far fa-envelope"></i>
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-share"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 membership-prices">
+                    <div class="membership-prices-title">
+                        <span>Membership <i>prices</i></span>
+                    </div>
+                    <div class="membership-prices-content">
+                        <span class="membership-title">25% discount for all members</span>
+                        <p class="membership-text">Discount on services and treatments at the GymBase for all membership cards holders.</p>
+                        <form class="membership-button" action="https://www.google.com/"><button>MORE</button></form>
 
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
 
@@ -92,4 +258,3 @@
     <script type="text/javascript" src="out/scripts/index.min.js"></script>
 </body>
 </html>
-
