next part of home page

--- a/index.html
+++ b/index.html
@@ -249,6 +249,188 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid trainers-main-home">
+            <div class="row">
+                <div class="col-xl-4 col-md-6 our-trainers">
+                    <div class="our-trainers-title">
+                        <span>Our trainers</span>
+                    </div>
+                    <div id="carouselExampleControls" class="carousel slide our-trainers-content" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    <div class="col-6 column-trainers">
+                                        <div class="trainer-photo">
+                                            <img src="out/img/home/trainer-spinning.jpg" alt="Photo trainer">
+                                        </div>
+                                        <div class="trainer-name">
+                                            <span>Becca Smith</span>
+                                        </div>
+                                        <div class="trainer-spec">
+                                            <span>Spinning</span>
+                                        </div>
+                                        <div class="trainer-desc">
+                                            <p>Creating the perfect body is no small matter.</p>
+                                        </div>
+                                        <div class="trainer-social">
+                                            <div class="trainer-like">
+                                                <i class="fas fa-heart"></i>
+                                                <i class="fas fa-thumbs-up"></i>
+                                            </div>
+                                            <div class="trainer-share">
+                                                <i class="fab fa-twitter"></i>
+                                                <i class="fab fa-facebook-f"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 column-trainers">
+                                        <div class="trainer-photo">
+                                            <img src="out/img/home/trainer-boxing.jpg" alt="Photo trainer">
+                                        </div>
+                                        <div class="trainer-name">
+                                            <span>John Jones</span>
+                                        </div>
+                                        <div class="trainer-spec">
+                                            <span>Kick boxing</span>
+                                        </div>
+                                        <div class="trainer-desc">
+                                            <p>Creating the perfect body is no small matter.</p>
+                                        </div>
+                                        <div class="trainer-social">
+                                            <div class="trainer-like">
+                                                <i class="fas fa-heart"></i>
+                                                <i class="fas fa-thumbs-up"></i>
+                                            </div>
+                                            <div class="trainer-share">
+                                                <i class="fab fa-twitter"></i>
+                                                <i class="fab fa-facebook-f"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <div class="col-6 column-trainers">
+                                        <div class="trainer-photo">
+                                            <img src="out/img/home/trainer-spinning.jpg" alt="Photo trainer">
+                                        </div>
+                                        <div class="trainer-name">
+                                            <span>Becca Smith</span>
+                                        </div>
+                                        <div class="trainer-spec">
+                                            <span>Spinning</span>
+                                        </div>
+                                        <div class="trainer-desc">
+                                            <p>Creating the perfect body is no small matter.</p>
+                                        </div>
+                                        <div class="trainer-social">
+                                            <div class="trainer-like">
+                                                <i class="fas fa-heart"></i>
+                                                <i class="fas fa-thumbs-up"></i>
+                                            </div>
+                                            <div class="trainer-share">
+                                                <i class="fab fa-twitter"></i>
+                                                <i class="fab fa-facebook-f"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 column-trainers">
+                                        <div class="trainer-photo">
+                                            <img src="out/img/home/trainer-boxing.jpg" alt="Photo trainer">
+                                        </div>
+                                        <div class="trainer-name">
+                                            <span>John Jones</span>
+                                        </div>
+                                        <div class="trainer-spec">
+                                            <span>Kick boxing</span>
+                                        </div>
+                                        <div class="trainer-desc">
+                                            <p>Creating the perfect body is no small matter.</p>
+                                        </div>
+                                        <div class="trainer-social">
+                                            <div class="trainer-like">
+                                                <i class="fas fa-heart"></i>
+                                                <i class="fas fa-thumbs-up"></i>
+                                            </div>
+                                            <div class="trainer-share">
+                                                <i class="fab fa-twitter"></i>
+                                                <i class="fab fa-facebook-f"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <i class="fas fa-chevron-left carousel-control-prev-icon" aria-hidden="true"></i>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <i class="fas fa-chevron-right carousel-control-next-icon" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 next-events">
+                    <div class="next-events-title">
+                        <span>Next events</span>
+                    </div>
+                    <div class="next-events-content">
+                        <div class="next-event-row">
+                            <div class="next-event-row-date">
+                                <span>26 GEN, 2014</span>
+                                <img src="out/img/home/event-aerobics-image.jpg" alt="Aerobic image">
+                            </div>
+                            <div class="next-event-row-desc">
+                                <span class="next-event-hour">h.12.00 - h. 13.00</span>
+                                <span class="next-event-type">Aerobics</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                <form action="https://www.booking.com"><button>Booking</button></form>
+                            </div>
+                        </div>
+                        <div class="next-event-row">
+                            <div class="next-event-row-date">
+                                <span>26 GEN, 2014</span>
+                                <img src="out/img/home/event-spinning-image.jpg" alt="Spinning image">
+                            </div>
+                            <div class="next-event-row-desc">
+                                <span class="next-event-hour">h.12.00 - h. 13.00</span>
+                                <span class="next-event-type">Aerobics</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                <form action="https://www.booking.com"><button>Booking</button></form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 from-the-blog">
+                    <div class="from-the-blog-title">
+                        <span>From the blog</span>
+                    </div>
+                    <div class="from-the-blog-content">
+                        <div class="from-the-blog-row">
+                            <img src="out/img/home/blog-box-image.jpg" alt="Box image">
+                            <div class="from-the-blog-row-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                <span>26 May, 2013</span>
+                            </div>
+                        </div>
+                        <div class="from-the-blog-row">
+                            <img src="out/img/home/blog-box1-image.jpg" alt="Box image">
+                            <div class="from-the-blog-row-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                <span>26 May, 2013</span>
+                            </div>
+                        </div>
+                        <div class="from-the-blog-row">
+                            <img src="out/img/home/blog-aerobic-image.jpg" alt="Aerobic image">
+                            <div class="from-the-blog-row-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                <span>26 May, 2013</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
 
