--- a/blog.html
+++ b/blog.html
@@ -13,18 +13,21 @@
 </head>
 <body>
 <header>
-    <div class="header-socials">
-        <div class="header-call">
-            <a href="tel:1-900-342-9876"><i class="fas fa-phone-alt"></i> 1-900-342-9876</a>
-        </div>
-        <div class="header-social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-pinterest-p"></i></a>
-            <a href="#"><i class="fab fa-google-plus-g"></i></a>
-            <a href="#"><i class="fab fa-tumblr"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fas fa-wifi"></i></a>
+    <div class="container-fluid header-socials">
+        <div class="row">
+            <div class="col-sm-6 header-call">
+                <a href="tel:1-900-342-9876"><i class="fas fa-phone-alt"></i> 1-900-342-9876</a>
+            </div>
+            <div class="col-sm-6 header-social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#"><i class="fab fa-tumblr"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fas fa-wifi"></i></a>
+            </div>
+
         </div>
     </div>
     <div class="header-navigation" id="headerNavigation">
