ready home page without map, ready footer for all pages

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-<header>
+    <header>
     <div class="container-fluid header-socials">
         <div class="row">
             <div class="col-sm-6 header-call">
@@ -72,6 +72,71 @@
         </nav>
     </div>
 </header>
+    <main>
+
+    </main>
+    <footer>
+        <div class="footer-head container-fluid">
+            <div class="row">
+                <div class="col-lg-4 footer-contact-newsletter">
+                    <span class="footer-menu-title">Newsletter signup</span>
+                    <p class="contact-newsletter-text">Sign up for our newsletter and get the latest news.</p>
+                    <input type="email" class="contact-newsletter-email" id="footerInsertEmail" aria-describedby="emailHelp" placeholder="INSERT EMAIL">
+                    <button type="submit" class="contact-newsletter-email-button">Submit email<i class="fas fa-chevron-right"></i></button>
+                </div>
+                <div class="col-lg-4 footer-contact-info">
+                    <div class="footer-gym-logo">
+                        <img src="out/img/home/gym-logo.png" alt="Gym logo">
+                    </div>
+                    <p class="contact-info-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec.</p>
+                    <div class="contact-info-contact">
+                        <span class="contact-info-contact-name">Phone:</span>
+                        <span class="contact-info-contact-result">1-900-342-9876</span>
+                    </div>
+                    <div class="contact-info-contact">
+                        <span class="contact-info-contact-name">e-mail:</span>
+                        <span class="contact-info-contact-result">info@gymsports.com</span>
+                    </div>
+                </div>
+                <div class="col-lg-2 footer-menu">
+                    <span class="footer-menu-title">Menu</span>
+                    <div class="footer-nav-menu">
+                        <a href="index.html"><i class="fas fa-chevron-right"></i>Home</a>
+                        <a href="about.html"><i class="fas fa-chevron-right"></i>About</a>
+                        <a href="timetable.html"><i class="fas fa-chevron-right"></i>Trainers</a>
+                        <a href="classes.html"><i class="fas fa-chevron-right"></i>Classes</a>
+                        <a href="pricing.html"><i class="fas fa-chevron-right"></i>Pricing</a>
+                        <a href="#"><i class="fas fa-chevron-right"></i>Privacy</a>
+                    </div>
+                </div>
+                <div class="col-lg-2 footer-menu">
+                    <span class="footer-menu-title">Community</span>
+                    <div class="footer-nav-menu">
+                        <a href="blog.html"><i class="fas fa-chevron-right"></i>Blog</a>
+                        <a href="http://lviv.multi.eu/ua/"><i class="fas fa-chevron-right"></i>Forum</a>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%BF%D0%BF%D0%BE%D1%80%D1%82"><i class="fas fa-chevron-right"></i>Support</a>
+                        <a href="https://www.nytimes.com/newsletters"><i class="fas fa-chevron-right"></i>Newsletter</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-down container-fluid">
+            <div class="row justify-content-between">
+                <div class="col-sm-3 footer-copyright">
+                    <span>© 2013 GYMSports</span>
+                </div>
+                <div class="col-sm-3 footer-socials">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#"><i class="fab fa-tumblr"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fas fa-wifi"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 <script type="text/javascript" src="out/scripts/libs/jquery-3.4.0.js"></script>
