--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <div class="our-trainers-title">
                         <span>Our trainers</span>
                     </div>
-                    <div id="carouselExampleControls" class="carousel slide our-trainers-content" data-ride="carousel">
+                    <div id="carouselTrainers" class="carousel slide our-trainers-content" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="row">
@@ -362,11 +362,11 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                            <i class="fas fa-chevron-left carousel-control-prev-icon" aria-hidden="true"></i>
+                        <a class="button-prev-trainers" href="#carouselTrainers" role="button" data-slide="prev">
+                            <i class="fas fa-chevron-left" aria-hidden="true"></i>
                         </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                            <i class="fas fa-chevron-right carousel-control-next-icon" aria-hidden="true"></i>
+                        <a class="button-next-trainers" href="#carouselTrainers" role="button" data-slide="next">
+                            <i class="fas fa-chevron-right" aria-hidden="true"></i>
                         </a>
                     </div>
                 </div>
@@ -431,7 +431,147 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid gallery-partners-main-home">
+            <div class="row">
+                <div class="col-xl-8 gallery">
+                    <div class="gallery-title">
+                        <span>Gallery</span>
+                    </div>
+                    <div id="carouselGallery" class="carousel slide gallery-carousel" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    <div class="col-4 column-gallery">
+                                        <img src="out/img/home/gallery-slide11.jpg" alt="Gallery image">
+                                        <img src="out/img/home/gallery-slide12.jpg" alt="Gallery image">
+                                    </div>
+                                    <div class="col-4 column-gallery">
+                                        <img src="out/img/home/gallery-slide21.jpg" alt="Gallery image">
+                                        <img src="out/img/home/gallery-slide22.jpg" alt="Gallery image">
+                                    </div>
+                                    <div class="col-4 column-gallery">
+                                        <img src="out/img/home/gallery-slide31.jpg" alt="Gallery image">
+                                        <img src="out/img/home/live-pilates-image.jpg" alt="Gallery image">
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <div class="col-4 column-gallery">
+                                        <img src="out/img/home/gallery-slide11.jpg" alt="Gallery image">
+                                        <img src="out/img/home/gallery-slide12.jpg" alt="Gallery image">
+                                    </div>
+                                    <div class="col-4 column-gallery">
+                                        <img src="out/img/home/gallery-slide21.jpg" alt="Gallery image">
+                                        <img src="out/img/home/gallery-slide22.jpg" alt="Gallery image">
+                                    </div>
+                                    <div class="col-4 column-gallery">
+                                        <img src="out/img/home/gallery-slide31.jpg" alt="Gallery image">
+                                        <img src="out/img/home/live-pilates-image.jpg" alt="Gallery image">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="button-prev-gallery" href="#carouselGallery" role="button" data-slide="prev">
+                            <i class="fas fa-chevron-left" aria-hidden="true"></i>
+                        </a>
+                        <a class="button-next-gallery" href="#carouselGallery" role="button" data-slide="next">
+                            <i class="fas fa-chevron-right" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4 partner">
+                    <div class="partner-title">
+                        <span>Partner</span>
+                    </div>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-6 column1">
+                                <img src="out/img/home/partner-logo11.png" alt="Nike logo">
+                                <img src="out/img/home/partner-logo12.png" alt="Puma logo">
+                                <img src="out/img/home/partner-logo13.png" alt="Speedo logo">
+                            </div>
+                            <div class="col-6 column2">
+                                <img src="out/img/home/partner-logo21.png" alt="Adidas logo">
+                                <img src="out/img/home/partner-logo22.png" alt="Reebok logo">
+                                <img src="out/img/home/partner-logo23.png" alt="Jaked logo">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="map"></div>
+        <div class="twitter-main-home">
+            <img src="out/img/home/twitter-logo-home.png" alt="Twitter logo">
+            <p>RT @collis: Trade growth ideas with other founders. Look for ways to cross promote. Small startups today may be big friends later. (9/10) <a
+                    href="#">2 days ago</a></p>
+        </div>
     </main>
+    <footer>
+        <div class="footer-head container-fluid">
+            <div class="row">
+                <div class="col-lg-4 footer-contact-newsletter">
+                    <span class="footer-menu-title">Newsletter signup</span>
+                    <p class="contact-newsletter-text">Sign up for our newsletter and get the latest news.</p>
+                    <input type="email" class="contact-newsletter-email" id="footerInsertEmail" aria-describedby="emailHelp" placeholder="INSERT EMAIL">
+                    <button type="submit" class="contact-newsletter-email-button">Submit email<i class="fas fa-chevron-right"></i></button>
+                </div>
+                <div class="col-lg-4 footer-contact-info">
+                    <div class="footer-gym-logo">
+                        <img src="out/img/home/gym-logo.png" alt="Gym logo">
+                    </div>
+                    <p class="contact-info-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec.</p>
+                    <div class="contact-info-contact">
+                        <span class="contact-info-contact-name">Phone:</span>
+                        <span class="contact-info-contact-result">1-900-342-9876</span>
+                    </div>
+                    <div class="contact-info-contact">
+                        <span class="contact-info-contact-name">e-mail:</span>
+                        <span class="contact-info-contact-result">info@gymsports.com</span>
+                    </div>
+                </div>
+                <div class="col-lg-2 footer-menu">
+                    <span class="footer-menu-title">Menu</span>
+                    <div class="footer-nav-menu">
+                        <a href="about.html"><i class="fas fa-chevron-right"></i>About</a>
+                        <a href="timetable.html"><i class="fas fa-chevron-right"></i>Trainers</a>
+                        <a href="classes.html"><i class="fas fa-chevron-right"></i>Classes</a>
+                        <a href="pricing.html"><i class="fas fa-chevron-right"></i>Pricing</a>
+                        <a href="#"><i class="fas fa-chevron-right"></i>Privacy</a>
+                        <a href="contact.html"><i class="fas fa-chevron-right"></i>Contact</a>
+                    </div>
+                </div>
+                <div class="col-lg-2 footer-menu">
+                    <span class="footer-menu-title">Community</span>
+                    <div class="footer-nav-menu">
+                        <a href="blog.html"><i class="fas fa-chevron-right"></i>Blog</a>
+                        <a href="http://lviv.multi.eu/ua/"><i class="fas fa-chevron-right"></i>Forum</a>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%BF%D0%BF%D0%BE%D1%80%D1%82"><i class="fas fa-chevron-right"></i>Support</a>
+                        <a href="https://www.nytimes.com/newsletters"><i class="fas fa-chevron-right"></i>Newsletter</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-down container-fluid">
+            <div class="row justify-content-between">
+                <div class="col-sm-3 footer-copyright">
+                    <span>© 2013 GYMSports</span>
+                </div>
+                <div class="col-sm-3 footer-socials">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#"><i class="fab fa-tumblr"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fas fa-wifi"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script type="text/javascript" src="out/scripts/libs/jquery-3.4.0.js"></script>
